--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,9 @@
     <string name="note_edit_title">Edit note</string>
     <string name="note_title_hint">Title</string>
     <string name="note_content_hint">Content</string>
+
+    <string name="no_notes">Nothing here anymore</string>
+    <string name="loading_notes_error">Ups :/</string>
+    <string name="loading_notes">Loading…</string>
+
 </resources>
